[package]
name = "advent_of_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
unfmt = "0.1.2"
unindent = "0.2.3"
